--- a/timetable.html
+++ b/timetable.html
@@ -1,37 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <title>Timetable Page</title>
-		<style>
-	.container {
-    display: none;
-}
-	</style>
-</head>
-<body class="bg-light">
-
+    <style>
+      .container {
+        display: none;
+      }
+    </style>
+  </head>
+  <body class="bg-light">
     <div class="container">
-        <div class="row justify-content-center align-items-center" style="height: 100vh;">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h2 class="text-center mb-4" id="mainTitle">Admin Timetable Page</h2>
+      <div
+        class="row justify-content-center align-items-center"
+        style="height: 100vh"
+      >
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="text-center mb-4" id="mainTitle">
+                Admin Timetable Page
+              </h2>
 
-                        <a href="createCourse.html" class="btn btn-primary btn-block mb-3 createCourse-btn">Create Course</a>
-						<a href="chooseCourse.html" class="btn btn-primary btn-block mb-3 chooseCourse-btn">Assign Course</a>
-						<a href="addTimetable.html" class="btn btn-primary btn-block mb-3 addTimetable-btn">Add Timetable</a>
-						<a href="approveTimetable.html" class="btn btn-primary btn-block mb-3 approveTimetable-btn">Approve Timetable</a>
-						<a href="lecturerTimetableStatus.html" class="btn btn-primary btn-block mb-3 lecTimeSta-btn">Lecturer Timetable Status</a>
-						<a href="timetableDisplay.html" class="btn btn-primary btn-block mb-3 timetableDisplay-btn">Timetable Display</a>
-						<a href="lecTimetableManagement.html" class="btn btn-primary btn-block mb-3 lecTimetableManagement-btn">Lecturer / Tutor Timetable Management</a>
-                        <a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
-                    </div>
-                </div>
+              <a
+                href="createCourse.html"
+                class="btn btn-primary btn-block mb-3 createCourse-btn"
+                >Create Course</a
+              >
+              <a
+                href="chooseCourse.html"
+                class="btn btn-primary btn-block mb-3 chooseCourse-btn"
+                >Assign Course</a
+              >
+              <a
+                href="addTimetable.html"
+                class="btn btn-primary btn-block mb-3 addTimetable-btn"
+                >Add Timetable</a
+              >
+              <a
+                href="approveTimetable.html"
+                class="btn btn-primary btn-block mb-3 approveTimetable-btn"
+                >Approve Timetable</a
+              >
+              <a
+                href="lecturerTimetableStatus.html"
+                class="btn btn-primary btn-block mb-3 lecTimeSta-btn"
+                >Lecturer Timetable Status</a
+              >
+              <a
+                href="timetableDisplay.html"
+                class="btn btn-primary btn-block mb-3 timetableDisplay-btn"
+                >Timetable Display</a
+              >
+              <a
+                href="lecTimetableManagement.html"
+                class="btn btn-primary btn-block mb-3 lecTimetableManagement-btn"
+                >Lecturer / Tutor Timetable Management</a
+              >
+              <a href="#" class="btn btn-primary btn-block">...RELEASING...</a>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- jQuery library -->
@@ -40,64 +75,85 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<script>
-    // Initialize Firebase
-    const firebaseConfig = {
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script>
+      // Initialize Firebase
+      const firebaseConfig = {
         apiKey: "AIzaSyBtSdg0XwU3cePNEn-HVlof8vj_imx0guA",
         authDomain: "utarapp-9f3db.firebaseapp.com",
-		authDomain: "pctan9491.github.io",
+        authDomain: "pctan9491.github.io",
         projectId: "utarapp-9f3db",
         storageBucket: "utarapp-9f3db.appspot.com",
         messagingSenderId: "331019317153",
-        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0",
+      };
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
 
-    document.addEventListener("DOMContentLoaded", function() {
+      document.addEventListener("DOMContentLoaded", function () {
         const loggedInUser = localStorage.getItem("saveLoginID");
         console.log(loggedInUser);
 
-        db.collection("user").where("loginID", "==", loggedInUser).get()
-        .then((querySnapshot) => {
+        db.collection("user")
+          .where("loginID", "==", loggedInUser)
+          .get()
+          .then((querySnapshot) => {
             if (!querySnapshot.empty) {
-                const userData = querySnapshot.docs[0].data();
-                const userType = userData.userType;
-				const title = document.getElementById("mainTitle");
+              const userData = querySnapshot.docs[0].data();
+              const userType = userData.userType;
+              const title = document.getElementById("mainTitle");
 
-                if (userType === "administrator") {
-				title.textContent = "Admin Timetable Page";
-                    // Hide attendance for administrators
-                    document.querySelector(".addTimetable-btn").style.display = "none";
-                    document.querySelector(".lecTimeSta-btn").style.display = "none";
-                    document.querySelector(".timetableDisplay-btn").style.display = "none";
-                    document.querySelector(".lecTimetableManagement-btn").style.display = "none";
-					document.querySelector(".createCourse-btn").style.display = "block";
-					document.querySelector(".chooseCourse-btn").style.display = "block";
-					document.querySelector(".approveTimetable-btn").style.display = "block";
-					document.querySelector(".container").style.display = "block";
-                } else if (userType === "lecturer" || userType === "tutor") {
-				title.textContent = userType.charAt(0).toUpperCase() + userType.slice(1) + " Timetable Page";
-                    // Hide notification and student approval for lecturers and tutors
-                    document.querySelector(".addTimetable-btn").style.display = "block";
-                    document.querySelector(".lecTimeSta-btn").style.display = "block";
-                    document.querySelector(".timetableDisplay-btn").style.display = "block";
-                    document.querySelector(".lecTimetableManagement-btn").style.display = "block";
-					document.querySelector(".createCourse-btn").style.display = "none";
-					document.querySelector(".chooseCourse-btn").style.display = "none";
-					document.querySelector(".approveTimetable-btn").style.display = "none";
-					document.querySelector(".container").style.display = "block";
-                }
+              if (userType === "administrator") {
+                title.textContent = "Admin Timetable Page";
+                // Hide attendance for administrators
+                document.querySelector(".addTimetable-btn").style.display =
+                  "none";
+                document.querySelector(".lecTimeSta-btn").style.display =
+                  "none";
+                document.querySelector(".timetableDisplay-btn").style.display =
+                  "none";
+                document.querySelector(
+                  ".lecTimetableManagement-btn"
+                ).style.display = "none";
+                document.querySelector(".createCourse-btn").style.display =
+                  "block";
+                document.querySelector(".chooseCourse-btn").style.display =
+                  "block";
+                document.querySelector(".approveTimetable-btn").style.display =
+                  "block";
+                document.querySelector(".container").style.display = "block";
+              } else if (userType === "lecturer" || userType === "tutor") {
+                title.textContent =
+                  userType.charAt(0).toUpperCase() +
+                  userType.slice(1) +
+                  " Timetable Page";
+                // Hide notification and student approval for lecturers and tutors
+                document.querySelector(".addTimetable-btn").style.display =
+                  "block";
+                document.querySelector(".lecTimeSta-btn").style.display =
+                  "block";
+                document.querySelector(".timetableDisplay-btn").style.display =
+                  "block";
+                document.querySelector(
+                  ".lecTimetableManagement-btn"
+                ).style.display = "block";
+                document.querySelector(".createCourse-btn").style.display =
+                  "none";
+                document.querySelector(".chooseCourse-btn").style.display =
+                  "none";
+                document.querySelector(".approveTimetable-btn").style.display =
+                  "none";
+                document.querySelector(".container").style.display = "block";
+              }
             } else {
-                console.error("No user data found.");
+              console.error("No user data found.");
             }
-        })
-        .catch((error) => {
+          })
+          .catch((error) => {
             console.error("Error fetching user data:", error);
-        });
-    });  
-</script>
-</body>
+          });
+      });
+    </script>
+  </body>
 </html>
